--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <section class="contact">
 	<h2>Stay in Touch</h2>
-	<p><a href="https://wa.link/lk2bqq" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="#"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
+	<p><a href="https://wa.link/lk2bqq" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="https://instagram.com/experienceafro"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="#"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
 </section>
 
 <footer>
