footer links, map and date

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,10 +21,10 @@
 <section class="event">
 	<h2>Next Party: Acquainted</h2>
 	<div class="details">
-		<p><strong>Date:</strong> Saturday, May 24, 2025</p>
+		<p><strong>Date:</strong> May 2025</p>
 		<p><strong>Time:</strong> 6:00 PM - 4:00 AM</p>
 		<p><strong>Location:</strong> Gwarinpa, Abuja</p>
-		<p><a href="https://maps.google.com" target="_blank">View on Map</a></p>
+		<p><a href="https://maps.app.goo.gl/SaU9LbA7RXeBUBSi8" target="_blank">View on Map</a></p>
 	</div>
 </section>
 
@@ -53,7 +53,7 @@
 
 <section class="contact">
 	<h2>Stay in Touch</h2>
-	<p><a href="https://wa.link/lk2bqq" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="#"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
+	<p><a href="https://chat.whatsapp.com/CjDVTXgamTD9csQZoas717" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="https://instagram.com/experienceafro"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="#"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
 </section>
 
 <footer>
