--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
 
 <section class="contact">
 	<h2>Stay in Touch</h2>
-	<p><a href="https://chat.whatsapp.com/CjDVTXgamTD9csQZoas717" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="https://instagram.com/experienceafro"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="#"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
+	<p><a href="https://chat.whatsapp.com/CjDVTXgamTD9csQZoas717" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a> | <a href="https://instagram.com/experienceafro"><i class="fa-brands fa-instagram fa-2xl"></i></a> | <a href="mailto:xperienceafro@gmail.com?subject=Event Inquiry"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
 </section>
 
 <footer>
